fixoverflow

--- a/css/style.css
+++ b/css/style.css
@@ -25,13 +25,16 @@
   box-sizing: border-box;
 }
 
-body {
+html{
+  overflow-x: hidden;
+}
+
+ body {
   background-color: #b8e5ff;
   display: flex;
   flex-flow: column;
   height: 100vh;
   color: var(--font-color);
-  overflow-x: hidden;
 }
 
 #headlogo{
@@ -278,11 +281,6 @@ ul li {
   top: 0;
   bottom: 0;
   height: 50%;
-  background-size: 100%;
-  max-width: 50%;
-  max-height: 50%;
-  margin-right: 5%;
-  background-repeat: no-repeat;
 }
 
 .comingsoon .moving .beerbg{
